@@ -34,6 +34,9 @@
 	<script type="text/javascript" src="js/jquery.tipped-1.5.min.js"></script>
 	<script type="text/javascript" src="js/jqueryFileTree.js"></script>	
 	<script type="text/javascript" src="js/jquery.jec-1.2.5.js"></script>
+	<! -- Oracle RDP Control -->
+	<script type="text/javascript" src="rdpweb/webclient.js"></script>
+	<script type="text/javascript" src="rdpweb/swfobject.js"></script>
 	
 	<!-- Internal Scripts -->
     <script type="text/javascript" src="js/language.php"></script>
